--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -25,9 +25,11 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       #- uses: actions/checkout@v4
       - name: Print greeting
-        run: echo Hello, world!
+        run: | 
+          echo "Hello, world!"
+          echo "first multiple line command"
       - name: Print goodbye
-        run: echo bye, world!
+        run: "echo bye, world!"
       # Runs a single command using the runners shell
       #- name: Run a one-line script
       #  run: echo Hello, world!
